--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "burke-m-rich-react-portfolio",
+  "name": "jordan-hudgens-react-portfolio",
   "version": "1.0.0",
-  "description": "Personal portfolio app build in React",
+  "description": "Personal portfolio app built in React",
   "scripts": {
-    "preinstall": "npm set audit false",
+    "postinstall": "cp env.example.js env.js",
     "start": "webpack-dev-server --config webpack/dev.config.js --watch",
     "build": "cross-env NODE_ENV=production webpack --config webpack/prod.config.js --progress --display-error-details --color",
     "heroku-postbuild": "npm run build",
@@ -25,7 +25,7 @@
     "sass",
     "css module"
   ],
-  "author": "Your Name Here",
+  "author": "Jordan Hudgens",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/bottega-code-school/js-builder/issues"
@@ -34,19 +34,19 @@
   "dependencies": {
     "ajv": "^5.5.2",
     "autoprefixer": "^9.1.0",
-    "axios": "^0.19.2",
+    "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-async-to-promises": "^1.0.5",
+    "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^0.1.16",
     "copy-webpack-plugin": "^4.5.2",
     "cross-env": "^5.2.0",
-    "cruzrojo-js-package": "^0.1.0",
     "css-loader": "^1.0.0",
     "eslint": "^4.2.0",
     "eslint-loader": "^1.9.0",
@@ -56,30 +56,28 @@
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "moment": "^2.24.0",
+    "moment": "^2.22.2",
     "node-sass": "^4.9.2",
     "postcss-loader": "^2.1.6",
-    "react": "16.8.0",
-    "react-dom": "16.8.0",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
     "react-redux": "5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.3.1",
     "redux": "^3.7.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
-    "webpack": "^4.16.4",
     "webpack-cli": "^3.1.0",
     "webpack-dev-middleware": "^3.1.3",
-    "webpack-dev-server": "^3.3.1",
+    "webpack-dev-server": "^3.1.5",
     "webpack-hot-middleware": "^2.22.3",
     "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "uglifyjs-webpack-plugin": "^1.2.7"
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "webpack": "^4.16.4"
   }
 }
